Fixed button alignment

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 form {
   max-width: 400px;
-  margin: 20px auto;
+  margin: 10px auto;
   background: #fff;
 }
 
@@ -113,9 +113,9 @@ button {
   text-align: center;
   font-weight: 700;
   font-family: 'Merriweather', serif;
-  width: 360px;
-  padding: 20px 40px;
-  margin: 10px auto;
+  width: 350px;
+  padding: 20px 45px;
+  margin-top: 45px;
   border: 2px solid #48afab;
   border-radius: 5px;
   box-shadow: 0 -2px 0 rgba(255, 255, 255, 0.1) inset;
